[gd_scene load_steps=3 format=3 uid="uid://fgubtkpve5l3"]

[ext_resource type="Script" path="res://End.gd" id="1_semlc"]
[ext_resource type="PackedScene" uid="uid://d2bqtxfroq1it" path="res://Number_of_enemies.tscn" id="2_eswd3"]

[node name="End" type="Node2D"]
script = ExtResource("1_semlc")

[node name="Play_Again" type="Button" parent="."]
offset_left = 621.0
offset_top = 438.0
offset_right = 892.0
offset_bottom = 495.0
theme_override_font_sizes/font_size = 30
text = "Play Again?"

[node name="Quit" type="Button" parent="."]
offset_left = 621.0
offset_top = 568.0
offset_right = 892.0
offset_bottom = 625.0
theme_override_font_sizes/font_size = 30
text = "Quit?"

[node name="Menu" type="Button" parent="."]
offset_left = 623.0
offset_top = 503.0
offset_right = 894.0
offset_bottom = 560.0
theme_override_font_sizes/font_size = 30
text = "Menu?
"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 622.0
offset_top = 335.0
offset_right = 891.0
offset_bottom = 494.0
theme_override_font_sizes/normal_font_size = 30
text = "		You Died!
"

[node name="Number_of_enemies" parent="RichTextLabel" instance=ExtResource("2_eswd3")]
visible = false
layout_mode = 0
offset_left = 1.0
offset_top = 52.0
offset_right = 274.0
offset_bottom = 104.0
theme_override_font_sizes/normal_font_size = 30

[connection signal="pressed" from="Play_Again" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Menu" to="." method="_on_menu_pressed"]
[connection signal="ready" from="RichTextLabel" to="." method="_on_rich_text_label_ready"]
